Profile picture updated

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="about-header">
 			<h3>about</h3>
 			<div class="about-imag">
-			<img src="images/pic-9.jpg" alt=""/>
+			<img src="https://avatars.githubusercontent.com/MansiNibe" alt=""/>
 			</div>
 			<div class="about-text">
 					<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p> 
